# django-awl

./: .gitignore  .py_vir_env  .readthedocs.yaml  CHANGES.rst  LICENSE  README.rst  boot_django.py  clean_build.sh  djangoshell.py  load_tests.py  migrations.py  noxfile.py  pyflakes.sh  pyproject.toml  requirements.txt  rtd_req.txt  runtests.sh  setup.cfg  setup.py  tests.py  tox.ini
TestProject/: manage.py  noxfile.py  pyflakes.sh  runtests.sh
TestProject/TestProject/: asgi.py  settings.py  urls.py  wsgi.py
TestProject/tests/: test_admintools.py  test_colours.py  test_commands.py  test_contextproc.py  test_decorators.py  test_ranked.py  test_tags.py  test_utils.py  urls.py
awl/: admintools.py  context_processors.py  css_colours.py  decorators.py  logtools.py  models.py  utils.py  waelsteng.py
awl/management/commands/: create_cmd.py  create_test_admin.py  run_script.py  wipe_migrations.py
awl/migrations/: 0001_initial.py  0002_alter_counter_id_alter_lock_id.py
awl/rankedmodel/: admin.py  admintools.py  models.py  urls.py  views.py
awl/rankedmodel/tests/: models.py  test_ranked.py
awl/templatetags/: awltags.py
awl/tests/: admin.py  models.py  test_absmodels.py  test_admintools.py  test_colours.py  test_commands.py  test_contextproc.py  test_decorators.py  test_models.py  test_ranked.py  test_tags.py  test_utils.py  test_waelsteng.py  urls.py  views.py
docs/: Makefile  absmodels.rst  admintools.rst  commands.rst  conf.py  context.rst  css_colours.rst  decorators.rst  index.rst  models.rst  ranked.rst  tags.rst  utils.rst  waelsteng.rst
extras/SampleSite/: README  manage.py  requirements.txt  runme.py
extras/SampleSite/SampleSite/: asgi.py  settings.py  urls.py  wsgi.py
extras/SampleSite/app/: admin.py  models.py
extras/SampleSite/app/management/commands/: create_test_data.py
extras/sample_site/: README  manage.py  resetdb.sh
extras/sample_site/app/: admin.py  models.py
extras/sample_site/app/management/commands/: create_test_data.py
extras/sample_site/app/migrations/: 0001_initial.py
extras/sample_site/sample_site/: asgi.py  settings.py  urls.py  wsgi.py
src/awl/: absmodels.py  admintools.py  context_processors.py  css_colours.py  decorators.py  models.py  utils.py  waelsteng.py
src/awl/management/commands/: create_cmd.py  create_test_admin.py  print_setting.py  run_script.py  wipe_migrations.py
src/awl/rankedmodel/: models.py  urls.py
src/awl/templatetags/: awltags.py
tests/: admin.py  models.py  test_absmodels.py  test_commands.py  test_logtools.py  test_models.py  test_waelsteng.py  urls.py
tests/data/: runme.py
