# local dev install command:
#
# $ pip install -e ".[dev]"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "wheel",
]

[project]
name = "django-awl"
description = "Collection of Django utilities"
readme = "README.rst"
license = {text = "MIT"}
authors = [{name = "Christopher Trudeau"}]
urls = {Homepage = "https://github.com/cltrudeau/django-awl"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
  "version",
]
dependencies = [
  "Django>=3.2",
  "logthing>=1",
  "screwdriver>=0.14",
  "waelstow>=0.11",
]
[project.optional-dependencies]
dev = [
  "build==1.0.3",
  "context-temp==0.11.2",
  "coverage==7.3.2",
  "Django==5.0rc1",
  "logthing==1",
  "nox==2023.4.22",
  "pudb==2023.1",
  "pyflakes==3.1",
  "screwdriver==0.14",
  "Sphinx==7.2.6",
  "sphinx-rtd-theme==1.3",
  "twine==4.0.2",
  "waelstow==0.11.1",
]

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "awl.__version__"}

[tool.testenv]
commands = "python -m unittest"
deps = ".[dev]"
