# local dev install command:
#
#     $ pip install -e ".[dev]"

[metadata]
name = django-awl
version = attr: awl.__version__
author = Christopher Trudeau
url = https://github.com/cltrudeau/django-awl
description = Collection of Django utilities
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    Django>=3.2
    logthing>=1.0.0
    screwdriver>=0.14.0
    waelstow>=0.11.0


[options.extras_require]
dev =
    context-temp==0.11.2
    coverage==7.3.2
    Django==5.0rc1
    logthing==1.0.0
    nox==2023.4.22
    pudb==2023.1
    pyflakes==3.1.0
    screwdriver==0.14.0
    Sphinx==7.2.6
    sphinx-rtd-theme==1.3.0
    twine==4.0.2
    waelstow==0.11.1


[testenv]
commands = python -m unittest
deps = .[dev]
